--- a/book.bib
+++ b/book.bib
@@ -184,6 +184,19 @@
   publisher={O'Reilly Media}
 }
 
+
+@book{wickham2019,
+  title={Advanced R},
+  author={Wickham, Hadley},
+  isbn={9780815384571},
+  series={Chapman \& Hall/CRC The R Series},
+  url={https://books.google.com/books?id=FfsYCwAAQBAJ},
+  year={2019},
+  edition = {2nd},
+  publisher={CRC Press}
+}
+
+
 @book{wickham-unpub,
   title={R Packages},
   author={Wickham, Hadley and Bryan, Jenny},
